# geopolygonize

./: .gitignore  README.md  clean_and_vectorize_raster.py  demo.ipynb  demo.py  download_vegetation_data.py  landcover_classes_to_json.py  polygonize.py  processing.py  pyproject.toml  requirements.txt  setup.sh  split_raster.py  tile_landcover.sh  view.py
.githooks/: pre-commit
.github/workflows/: build-docs.yml
docs/: index.html  search.js
docs/src/: geopolygonizer.html
geopolygonize/: geopolygonize.py  processing.py
src/: blobifier.py  clean.py  cleaner.py  geopolygonize.py  geopolygonizer.py  processing.py  view.py
src/blobifier/: blobifier.test.ipynb
src/segmenter/: README.md  area.py  boundary.py  boundary_cutter.py  clean_polygon.py  fix_polygon.py  fix_polygon.test.ipynb  fix_polygon.test.py  positioned_point.py  segment.py  segmenter.py
src/tiler/: __init__.py  config.py  io.py  pipeline.py  store.py  types.py
src/utils/: blobifier.py  checkers.py  clean_exit.py  io.py  smoothing.py  tiler.py  unifier.py
tests/: blobifier.test.ipynb  fix_polygon.test.ipynb  run_e2e_test.sh  view.py  visualization.py
utilities/: combine.py  cut.py  downsample.py  fill.py  view.py  visualization.py
utils/: blob_remover.py  blob_remover.test.ipynb  blobifier.py  blobifier.test.ipynb  simplification.py  tiler.py  visualization.py
utils/vectorizer/: area.py  area_computer.py  cover.py  cover_computer.py  cutpoints_computer.py  intersections_computer.py  line_utils.py  loop.py  loop_computer.py  oriented_potential.py  oriented_potential_computer.py  segment.py  (+3 more)
(+30 files in other folders)
