[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geopolygonize"
dynamic = ["version"]
description = 'Convert geographic rasters into simplified polygons'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Sydney Zheng", email = "slzheng@alumni.cmu.edu" },
  { name = "Christian Broms", email = "christian@rainflame.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "shapely>=2.0.0",
    "geopandas>=0.14.1",
    "tqdm>=4.66.1",
    "rasterio>=1.0.0",
    "numpy>=1.26.2",
    "scipy>=1.11.0",
    "Rtree>=1.1.0",
    "sortedcontainers>=2.4.0",
]

[project.urls]
Documentation = "https://github.com/rainflame/geopolygonize#readme"
Issues = "https://github.com/rainflame/geopolygonize/issues"
Source = "https://github.com/rainflame/geopolygonize"

[project.scripts]
geopolygonize = "src.geopolygonize:cli"

[tool.hatch.version]
path = "src/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]
